--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     <section class="page-header">
       <h1 class="project-name">2016 KAIST YOUTH CAMP</h1>
       <h2 class="project-tagline">Python Level 1</h2>
+      <!--
       <a href="https://github.com/GAONNR/youthcamp.gaonnr.me" class="btn">View on GitHub</a>
       <a href="https://github.com/GAONNR/youthcamp.gaonnr.me/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/GAONNR/youthcamp.gaonnr.me/tarball/master" class="btn">Download .tar.gz</a>
+    -->
     </section>
 
     <section class="main-content">
       <h3>
-<a id="개발-환경-만들기" class="anchor" href="#%EA%B0%9C%EB%B0%9C-%ED%99%98%EA%B2%BD-%EB%A7%8C%EB%93%A4%EA%B8%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>개발 환경 만들기</h3>
+<a id="setting" class="anchor" href="#setting" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>개발 환경 만들기</h3>
 
 <p>Python을 쓰려면 먼저 사전 작업이 조금 필요합니다.<br>
 먼저 <a href="https://www.python.org/downloads/">https://www.python.org/downloads/</a>에서 Python 2.7을 내려받아 설치합니다.<br>
@@ -28,12 +30,12 @@
 마지막으로 <a href="http://wingware.com/downloads/wingide-101/5.1.12-1">http://wingware.com/downloads/wingide-101/5.1.12-1</a>에서 Wing IDE 101을 내려받습니다. 다른 IDE나 텍스트 에디터를 사용하고 싶다면, 사용해도 괜찮습니다.</p>
 
 <h3>
-<a id="pygame-예제" class="anchor" href="#pygame-%EC%98%88%EC%A0%9C" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>pygame 예제</h3>
+<a id="pygame-ex" class="anchor" href="#pygame-ex" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>pygame 예제</h3>
 
 <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
 
 <h3>
-<a id="tetris-만들기" class="anchor" href="#tetris-%EB%A7%8C%EB%93%A4%EA%B8%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tetris 만들기</h3>
+<a id="make-tetris" class="anchor" href="#make-tetris" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tetris 만들기</h3>
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
@@ -45,6 +47,6 @@
 
     </section>
 
-  
+
   </body>
 </html>
