modified description of the page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">2016 KAIST YOUTH CAMP</h1>
-      <h2 class="project-tagline">Python Level 1</h2>
+      <h2 class="project-tagline">Python Level 1 - Python으로 퍼즐게임(테트리스) 만들기</h2>
       <!--
       <a href="https://github.com/GAONNR/youthcamp.gaonnr.me" class="btn">View on GitHub</a>
       <a href="https://github.com/GAONNR/youthcamp.gaonnr.me/zipball/master" class="btn">Download .zip</a>
