Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 <h3>
 <a id="pygame-예제" class="anchor" href="#pygame-%EC%98%88%EC%A0%9C" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>pygame 예제</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<div class="highlight highlight-source-python"><pre><span class="pl-k">import</span> pygame</pre></div>
+
+<p><code>import</code>  </p>
 
 <h3>
 <a id="tetris-만들기" class="anchor" href="#tetris-%EB%A7%8C%EB%93%A4%EA%B8%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tetris 만들기</h3>
