--- a/index.html
+++ b/index.html
@@ -5,22 +5,26 @@
     <title>2016 KAIST YOUTH CAMP by GAONNR</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
+    <!--
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+  -->
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
     <section class="page-header">
       <h1 class="project-name">2016 KAIST YOUTH CAMP</h1>
-      <h2 class="project-tagline">Python Level 1</h2>
+      <h2 class="project-tagline">Python Level 1 - Python을 활용한 퍼즐게임(테트리스) 만들기</h2>
+      <!--
       <a href="https://github.com/GAONNR/youthcamp.gaonnr.me" class="btn">View on GitHub</a>
       <a href="https://github.com/GAONNR/youthcamp.gaonnr.me/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/GAONNR/youthcamp.gaonnr.me/tarball/master" class="btn">Download .tar.gz</a>
+    -->
     </section>
 
     <section class="main-content">
       <h3>
-<a id="개발-환경-만들기" class="anchor" href="#%EA%B0%9C%EB%B0%9C-%ED%99%98%EA%B2%BD-%EB%A7%8C%EB%93%A4%EA%B8%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>개발 환경 만들기</h3>
+<a id="setting" class="anchor" href="#setting" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>개발 환경 만들기</h3>
 
 <p>Python을 쓰려면 먼저 사전 작업이 조금 필요합니다.<br>
 먼저 <a href="https://www.python.org/downloads/">https://www.python.org/downloads/</a>에서 Python 2.7을 내려받아 설치합니다.<br>
@@ -28,14 +32,15 @@
 마지막으로 <a href="http://wingware.com/downloads/wingide-101/5.1.12-1">http://wingware.com/downloads/wingide-101/5.1.12-1</a>에서 Wing IDE 101을 내려받습니다. 다른 IDE나 텍스트 에디터를 사용하고 싶다면, 사용해도 괜찮습니다.</p>
 
 <h3>
-<a id="pygame-예제" class="anchor" href="#pygame-%EC%98%88%EC%A0%9C" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>pygame 예제</h3>
-
+<a id="pygame-ex" class="anchor" href="#pygame-ex" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>pygame 예제</h3>
+<p>Python은 어느 정도 쓸 줄 알죠? 이제는 pygame을 써 봅시다.<br>
+  새 Python 파일을 만들고, 다음과 같은 코드를 적습니다.
 <div class="highlight highlight-source-python"><pre><span class="pl-k">import</span> pygame</pre></div>
 
 <p><code>import</code>  </p>
 
 <h3>
-<a id="tetris-만들기" class="anchor" href="#tetris-%EB%A7%8C%EB%93%A4%EA%B8%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tetris 만들기</h3>
+<a id="tetris" class="anchor" href="#tetris" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tetris 만들기</h3>
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
@@ -47,6 +52,6 @@
 
     </section>
 
-  
+
   </body>
 </html>
